@@ -17,6 +17,7 @@ Date: ????
     - Create an electric pole when hovering your own proxy
     - Prevent the player from mining the proxy
     - Put the created pole into a struct
+    - Key the struct by proxy unit number
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 08
